# imgview

./: .gitignore  README.md  meson.build  nvim-cc.txt
src/: argparse.c  eval.c  eval.h  image.c  image.h  main.c  smanager.c  state.c  state.h  str.c  str.h  wcontrol.c  wcontrol.h  window.c  window.h
src/include/: argparse.h  eval.h  image.h  smanager.h  vec.h  wcontrol.h  window.h
